# python_boilerplate

./: README.md  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
